data/derived/comb/progs/unify/prog4334.ml.out
Characters 166-168:
  | Sine (e1)          -> Printf.sprintf"%d" e1
                                             ^^
Error: This expression has type expr but an expression was expected of type
         int
